--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-gallery-carousel": "^0.2.10",
     "react-hook-form": "^7.34.2",
+    "react-image-gallery": "^1.2.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "rsuite": "^5.18.1",
