--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.29.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
